--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: 'Lato' 'Helvetica' 'Arial' 'sans-serif';
+	font-family: Lato, Helvetica, Arial, sans-serif;
 	padding: 10vw;
 	color: #444444;
 	background-color: #f3f3f3;
@@ -58,8 +58,8 @@ li{
 p{
 	font-size: 0.9rem;
 }
-#mainArea {
-	border-top: 2px solid #cf8a05;
+.clear{
+	border-bottom: 2px solid #cf8a05;
 	margin: 13.944px;
 }
 .mainDetails{
@@ -71,7 +71,7 @@ p{
 	font-style: italic;
 }
 #mainArea .clear{
-	border-bottom: 1px solid rgba(128, 128, 128, 0.356);
+	border-bottom: 1px solid #dedede;
 }
 
 #contactDetails {
@@ -83,9 +83,10 @@ p{
 }
 
 .sectionTitle {
+	text-align: center;
 	font-size: 0.7rem;
 	color: #cf8a05;
-	font-family: 'Rokkitt' 'Helvetica' 'Arial' 'sans-serif';
+	font-family: Rokkitt, Helvetica, Arial, sans-serif;
 	font-style: italic;
 	float: left;
 	width: none;
